[gd_scene load_steps=76 format=2]

[ext_resource path="res://Assets/Audio/stardust-danijel-zambo-main-version-03-13-1372.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/back-button-white.png" type="Texture" id=2]
[ext_resource path="res://Assets/desert1.png" type="Texture" id=3]
[ext_resource path="res://Assets/background.png" type="Texture" id=4]
[ext_resource path="res://Assets/IMG_2087.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Rocky Roads/mountains_b-cropped.png" type="Texture" id=6]
[ext_resource path="res://Scripts/control.gd" type="Script" id=7]
[ext_resource path="res://Assets/MainMenuFonts.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Rocky Roads/Tilesets/tileset_forest.png" type="Texture" id=9]
[ext_resource path="res://Assets/pixopedia.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/PlayerSprites/Player2.png" type="Texture" id=11]
[ext_resource path="res://Assets/PlayerSprites/Player1.png" type="Texture" id=12]
[ext_resource path="res://Assets/fonts/Xbox.ttf" type="DynamicFontData" id=13]

[sub_resource type="TileSet" id=1]
0/name = "tileset_forest.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 16, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset_forest.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 32, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileset_forest.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 48, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tileset_forest.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 48, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tileset_forest.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 64, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tileset_forest.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 96, 48, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tileset_forest.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 96, 32, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tileset_forest.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 16, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tileset_forest.png 8"
8/texture = ExtResource( 9 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 16, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tileset_forest.png 9"
9/texture = ExtResource( 9 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 96, 64, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tileset_forest.png 10"
10/texture = ExtResource( 9 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 16, 64, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 10 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 400, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 480, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 560, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 80, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 240, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 400, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 480, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 560, 720, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 80, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 240, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 400, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 480, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "a_falling",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "a_idle",
"speed": 10.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "a_jumping",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "a_lending",
"speed": 10.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "a_p1_prepareThrow",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "a_p1_throw",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "a_walking",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 640, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 896, 1152, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=65]
animations = [ {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "a_p2_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "a_p2_jumping",
"speed": 10.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "a_p2_lending",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ) ],
"loop": true,
"name": "a_p2_prepareThrow",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": false,
"name": "a_p2_throw",
"speed": 10.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "a_p2_walking",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=66]
size = 30
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=67]
size = 19
extra_spacing_bottom = 11
font_data = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Background-forest" type="Sprite" parent="."]
position = Vector2( 512.5, 299.5 )
scale = Vector2( 4.01953, 4.20139 )
texture = ExtResource( 4 )

[node name="Background-desert" type="Sprite" parent="."]
position = Vector2( 583, 252.75 )
scale = Vector2( 0.240365, 0.334954 )
texture = ExtResource( 3 )

[node name="MountainsB-cropped" type="Sprite" parent="."]
position = Vector2( 846, 459 )
scale = Vector2( 3.56738, 4.83984 )
texture = ExtResource( 6 )
offset = Vector2( -3.92445, -31.406 )

[node name="Divider-1" type="Sprite" parent="."]
position = Vector2( 304, 301 )
scale = Vector2( 2.59185, 4.00667 )
texture = ExtResource( 5 )

[node name="Divider-2" type="Sprite" parent="."]
position = Vector2( 712, 301 )
scale = Vector2( 2.59185, 4.00667 )
texture = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196609, 0, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 6, 0, 196622, 1, 0, 196623, 8, 0, 196624, 8, 0, 196625, 8, 0, 196626, 8, 0, 196627, 8, 0, 196628, 6, 0, 262145, 2, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 5, 0, 262158, 2, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 5, 0, 327681, 2, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 5, 0, 327694, 2, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 5, 0, 393217, 2, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 5, 0, 393230, 2, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 5, 0, 458753, 2, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 5, 0, 458766, 2, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 5, 0, 524289, 2, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 5, 0, 524302, 2, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 5, 0, 589825, 2, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 5, 0, 589838, 2, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 5, 0, 655361, 2, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 5, 0, 655374, 2, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 5, 0, 720897, 10, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 9, 0, 720910, 10, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 9, 0 )

[node name="Player1 Movement" type="Label" parent="."]
margin_left = 119.0
margin_top = 189.0
margin_right = 308.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 8 )
text = "Player 1:"

[node name="Player1 Movement2" type="Label" parent="."]
margin_left = 85.0
margin_top = 238.0
margin_right = 385.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 2 )
text = "WASD - Move
W-Climbup / Jump
S- Climbdown
Ctrl-Lending/Throw
"

[node name="Player2 Movement" type="Label" parent="."]
margin_left = 748.0
margin_top = 186.0
margin_right = 930.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 8 )
text = "Player 2:"

[node name="Player2 Movement2" type="Label" parent="."]
margin_left = 713.0
margin_top = 239.0
margin_right = 979.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 3 )
text = "Arrows - Move
Up- Climbup/Jump
Down-Climbdown
Shift-Lending/Throw"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 4.0
margin_top = -15.0
margin_right = 132.0
margin_bottom = 113.0
texture_normal = ExtResource( 2 )

[node name="ControlsStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Music from #Uppbeat (free for Creators!):
https://uppbeat.io/t/danijel-zambo/stardust
License code: R4TEAVWDGJCZ6AJU"
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 228, 112 )
frames = SubResource( 40 )
animation = "a_idle"
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 835, 111 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 65 )
animation = "a_p2_throw"
frame = 2

[node name="Player1 Movement3" type="Label" parent="."]
margin_left = 88.0
margin_top = 336.0
margin_right = 116.0
margin_bottom = 537.0
custom_fonts/font = SubResource( 66 )
text = "b
a
}
m
6
4"

[node name="Player1 Movement4" type="Label" parent="."]
margin_left = 120.0
margin_top = 345.0
margin_right = 420.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 67 )
text = "Back
Accept/Jump
Lending/Throw
Pause
Move Right
Move Left"

[node name="Player1 Movement5" type="Label" parent="."]
margin_left = 711.0
margin_top = 336.0
margin_right = 739.0
margin_bottom = 537.0
custom_fonts/font = SubResource( 66 )
text = "b
a
}
m
6
4"

[node name="Player1 Movement6" type="Label" parent="."]
margin_left = 741.0
margin_top = 345.0
margin_right = 1041.0
margin_bottom = 546.0
custom_fonts/font = SubResource( 67 )
text = "Back
Accept/Jump
Lending/Throw
Pause
Move Right
Move Left"

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
